fix some spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,9 +11,13 @@
   --space-2: 0.5rem;
   --space-3: 0.75rem;
   --space-4: 1rem;
+  --space-5: 1.25rem;
   --space-6: 1.5rem;
+  --space-7: 1.75rem;
   --space-8: 2rem;
+  --space-9: 2.25rem;
   --space-10: 2.5rem;
+  --space-11: 2.75rem;
   --space-12: 3rem;
   --space-16: 4rem;
   --space-20: 5rem;
@@ -333,12 +337,14 @@ h2 + h1 {
   gap: var(--space-4);
   padding-top: var(--space-2);
   border-top: 1px dashed var(--color-border);
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
+  /* padding-left: 0.75rem;
+  padding-right: 0.75rem; */
+  padding-bottom: 0.05rem;
 }
 
 .footer-line {
-  padding-top: 1rem;
+  /* padding-top: 1rem; */
+  margin-bottom: -0.55rem;
   color: var(--color-text-muted);
   font-size: var(--text-xxs);
 }
